# legendary-waddle

./: .gitignore  CLAUDE.md  Dockerfile  README.md  prd.json  ralph.sh
.claude/: settings.json
.github/workflows/: docker-publish.yml  stats.yml
api/: Dockerfile  auth.py  auth2.py  dashboard.py  db.json  main.py  models.py  profile.py  records.py  requirements.txt  ruff.toml  schedule.py  schema.py  start.sh  user_profile.py  workouts.py
api-v2/: main.py
api/auth/: current_user.py  models.py  router.py
api/common/: database.py  logger.py
api/dashboards/: api.py  repository.py
api/infrastructure/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
api/migration/: wokout_migration_handler.py
api/repository/: auth.py  dashboard.py  database.py  models.py  profile.py  records.py  schedule.py  schema.py  (+3 more)
backend/web-server/: Cargo.toml  Dockerfile
backend/web-server/scripts/: run.local.sh
backend/web-server/src/: lib.rs  main.rs  startup_database.rs  startup_web.rs
backend/web-server/src/common/: resource.rs
backend/web-server/src/common/repository/: mod.rs  user_repo.rs
backend/web-server/src/routes/: db_test.rs  mod.rs  user.rs
backend/web-server/src/user/: controller.rs  dto.rs  entity.rs  mod.rs  service.rs  traits.rs  user_repo.rs
stats/: fetch.py  render.py  test_render_font.py
ui/: CODE_ORGANIZATION.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts  wrangler.jsonc
ui-v2/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+109 files in other folders)
