[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "legendary-waddle"

[dependencies]
actix-web = "4.10.2"
chrono = "0.4.40"
config = "0.15.11"
env_logger = "0.11.7"
log = "0.4.26"
serde = { version = "1.0.219", features = [ "derive" ] }
tokio = { version = "1.44.1", features = [ "macros", "rt-multi-thread" ] }
sqlx = { version = "0.8.3", features = [
  "runtime-tokio", 
  "tls-native-tls", 
  "mysql",
  "uuid",
  "chrono"] }